src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>KS_Activo__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Activo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_C_Level__c</fullName>
        <label>C-Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Si</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Calle__c</fullName>
        <formula>Account.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Canal_de_publicidad__c</fullName>
        <label>Canal de publicidad</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SI_Consiente_tratamiento_de_datos__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>KS_Tipo_de_publicidad</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Ciudad__c</fullName>
        <formula>Account.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ciudad</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_CloudExplorer2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CloudExplorer2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Codigo_postal__c</fullName>
        <formula>Account.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Código postal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Comentarios_valoracion__c</fullName>
        <label>Comentarios valoración</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>KS_Control_Parenting__c</fullName>
        <formula>IF( OwnerId =  Account.OwnerId , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Control Parenting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Direcci_n_de_env_o_publicidad__c</fullName>
        <label>Dirección de envío publicidad</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>KS_Canal_de_publicidad__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>KS_Direcci_n_publicidad</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Fecha_de_baja__c</fullName>
        <label>Fecha de baja</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KS_Funcion_en_empresa__c</fullName>
        <label>Función en empresa</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Funcion_en_empresa</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Grado_de_satisfaccion__c</fullName>
        <label>Grado de satisfacción</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Valoracion</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Id_CRM_Contacto__c</fullName>
        <externalId>true</externalId>
        <label>Id CRM Contacto</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Id_Cibor_Contacto__c</fullName>
        <externalId>true</externalId>
        <label>Id Cibor Contacto</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>KS_Id_Salesforce_cuenta__c</fullName>
        <formula>Account.KS_Id_Salesforce__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Id-Salesforce cuenta</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Idioma__c</fullName>
        <label>Idioma</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Idiomas</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Interes_en_del__c</fullName>
        <label>Interes en (NO USAR)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Intereses</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Pais__c</fullName>
        <formula>Account.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>País</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Provincia__c</fullName>
        <formula>Account.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provincia</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Telf_contact__c</fullName>
        <formula>Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Telf_contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_decisor__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Persona influyente (en compra / prescripción)</inlineHelpText>
        <label>Decisor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_id_cuenta_intern__c</fullName>
        <formula>Account.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>id_cuenta_intern</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SI_Acepta_envio_postal__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Acepta envío postal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SI_Actividad_Cuenta__c</fullName>
        <formula>TEXT(Account.KS_Actividad__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actividad_Cuenta</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SI_CalidadDireccion__c</fullName>
        <label>Calidad Dirección</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ok</fullName>
                    <default>true</default>
                    <label>Ok</label>
                </value>
                <value>
                    <fullName>Rechazo Postal</fullName>
                </value>
                <value>
                    <fullName>A Revisar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SI_Causa_Pasivado_Contacto__c</fullName>
        <label>Causa Pasivado Contacto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Fuera de target</fullName>
                </value>
                <value>
                    <fullName>Pasivado permanentemente</fullName>
                </value>
                <value>
                    <fullName>Pide baja de la BBDD</fullName>
                </value>
                <value>
                    <fullName>Sin actividad o trabajo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SI_ClaveAlfaNum__c</fullName>
        <formula>RIGHT( Id ,6)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ClaveAlfaNum</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SI_Consiente_tratamiento_de_datos__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consentimiento</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SI_Descripcion_proyecto_c__c</fullName>
        <description>Comentarios del lead relacionado con su obra o consulta</description>
        <label>Descripción proyecto</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SI_Email_Personal__c</fullName>
        <description>Dirección de correo electrónico personal</description>
        <label>Correo Electrónico Personal</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SI_EstadoDuplicado__c</fullName>
        <label>Estado Duplicado</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Duplicado</fullName>
                </value>
                <value>
                    <fullName>Posible Duplicado</fullName>
                </value>
                <value>
                    <fullName>Duplicado 100%</fullName>
                </value>
                <value>
                    <fullName>Nuevo</fullName>
                    <default>true</default>
                    <label>Nuevo</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SI_Interes_Legitimo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interés Legítimo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SI_Interes_en__c</fullName>
        <label>Interes en</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mecanismos</fullName>
                </value>
                <value>
                    <fullName>Conectividad</fullName>
                </value>
                <value>
                    <fullName>Iluminación</fullName>
                </value>
                <value>
                    <fullName>Sistemas de control</fullName>
                </value>
                <value>
                    <fullName>Vehículo Eléctrico</fullName>
                </value>
                <value>
                    <fullName>Porteros automáticos</fullName>
                </value>
                <value>
                    <fullName>Cuadros eléctricos</fullName>
                </value>
                <value>
                    <fullName>Seguridad</fullName>
                </value>
                <value>
                    <fullName>Otros</fullName>
                </value>
                <value>
                    <fullName>Iluminación exterior</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SI_Mail_ValidadoContacto__c</fullName>
        <label>Mail Válido</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SI_Rechaza_comunicaciones__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rechaza comunicaciones</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SI_Telofono_Movil__c</fullName>
        <label>Teléfono Móvil</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SI_Tratamiento_Datos_Contacto__c</fullName>
        <label>Tratamiento Datos Lead</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Freely given consent from contact</fullName>
                </value>
                <value>
                    <fullName>Legitimate interest - prospect/lead</fullName>
                </value>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
                <value>
                    <fullName>Legitimate interest - existing customer</fullName>
                </value>
                <value>
                    <fullName>Performance of a contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KS_Activo__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Todos Los contactos</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CHANGE_Consentimiento</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( SI_Consiente_tratamiento_de_datos__c ) 
&amp;&amp; SI_Consiente_tratamiento_de_datos__c == false 
&amp;&amp; !CONTAINS($Profile.Name, &apos;Admin&apos;) 
&amp;&amp; SI_Rechaza_comunicaciones__c == false</errorConditionFormula>
        <errorMessage>Una vez dado el consentimiento, no puede quitarse.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CHANGE_Rechazo_OLD</fullName>
        <active>false</active>
        <errorConditionFormula>(ISCHANGED( SI_Rechaza_comunicaciones__c ) 
&amp;&amp; SI_Rechaza_comunicaciones__c == false 
&amp;&amp; !CONTAINS($Profile.Name, &apos;Admin&apos;))
||
(ISCHANGED( SI_Consiente_tratamiento_de_datos__c ) 
&amp;&amp; SI_Consiente_tratamiento_de_datos__c == true 
&amp;&amp; !CONTAINS($Profile.Name, &apos;Admin&apos;)
&amp;&amp; SI_Rechaza_comunicaciones__c == true)</errorConditionFormula>
        <errorMessage>Una vez rechazada la comunicación, no puede aceptarse.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Change_RPGD</fullName>
        <active>false</active>
        <errorConditionFormula>SI_Consiente_tratamiento_de_datos__c  = true   &amp;&amp;   SI_Rechaza_comunicaciones__c = true</errorConditionFormula>
        <errorMessage>Un contacto no puede aceptar y rechazar el consentimiento del tratamiento de sus datos a la vez</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NoNewContact</fullName>
        <active>false</active>
        <description>No se pueden crear nuevos contactos</description>
        <errorConditionFormula>AND( 
ISNEW(), 
NOT(
OR(CONTAINS($Profile.Name, &quot;Administrador&quot;),
   CONTAINS($Profile.Name, &quot;Administrator&quot;))
)
)</errorConditionFormula>
        <errorMessage>No se pueden crear nuevos contactos, debes seguir el procedimiento de creación de LEADS</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NombreObligatorio</fullName>
        <active>true</active>
        <description>Regla de validacion que hace obligatorios los campos tratamiento, nombre y apellido.</description>
        <errorConditionFormula>OR(FirstName =&apos;&apos;, LastName =&apos;&apos;)</errorConditionFormula>
        <errorMessage>El tratamiento, nombre y apellido del contacto son obligatorios</errorMessage>
    </validationRules>
</CustomObject>